RESOLVED FIXED152712
Hardware keyboard key-commands stop responding when viewing PDFs
https://bugs.webkit.org/show_bug.cgi?id=152712
Summary Hardware keyboard key-commands stop responding when viewing PDFs
Tim Horton
Reported 2016-01-04 13:26:46 PST
Hardware keyboard key-commands stop responding when viewing PDFs
Attachments
Patch (2.99 KB, patch)
2016-01-04 13:27 PST, Tim Horton
mitz: review+
Tim Horton
Comment 1 2016-01-04 13:27:00 PST
mitz
Comment 2 2016-01-04 13:30:39 PST
Comment on attachment 268229 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=268229&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:793 > + return [[self _currentContentView] becomeFirstResponder] || [super becomeFirstResponder]; Can’t use a dot here?
Tim Horton
Comment 3 2016-01-04 14:42:51 PST
Note You need to log in before you can comment on or make changes to this bug.