Hardware keyboard key-commands stop responding when viewing PDFs https://bugs.webkit.org/show_bug.cgi?id=152712 <rdar://problem/23014457>

Reviewed by Dan Bernstein.

Maintain first responder status through any content view swapping, by
making WKWebView become first responder if needed, and pushing first
responder status down to the swapped-in content view if possible.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView becomeFirstResponder]):
Make the current content view first responder instead of the WKContentView,
in case we have a custom content view installed.

(-[WKWebView canBecomeFirstResponder]):
WKWebView can always become first responder, even if none of its children can.
This makes it so that if a custom content view can't become first responder,
WKWebView will take the responsibility.

(-[WKWebView _setHasCustomContentView:loadedMIMEType:]):
Return the responsibility of being first responder to the newly-installed
content view if WKWebView is currently the first responder (either because
of tab switching or because the previous content view did not support
being first responder), if it supports being first responder.


Canonical link: https://commits.webkit.org/170795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194557 268f45cc-cd09-0410-ab3c-d52691b4dbfc